<resources>
    <string name="app_name">Foko Retail Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Foko Retail Test</string>
    <string name="nav_header_subtitle">karan.deopura@queensu.ca</string>

    <string name="menu_team">Team Name</string>

    <string name="logo_host">thesportsdb.p.rapidapi.com</string>
    <string name="rapid_api_key">0823c4bd57msh35ebedbce2d182fp1307e0jsn5feec001e85a</string>

    <string name="position_filter">Filter by position</string>
    <string name="full_name">Full Name:</string>
    <string name="birth_place">Birth Place:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="age">Age:</string>
    <string name="birthdate">Birthdate:</string>
    <string name="nationality">Nationality:</string>
    <string name="ok">OK</string>
    <string name="number_sort">Sort By Jersey Number</string>
    <string name="name_sort">Sort By Name</string>
</resources>
